[package]
name = "externkit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "externkit"
path = "src/main.rs"

[lib]
name = "externkit"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = "4.5.41"
colored = "2.0"
crossterm = "0.28"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
reqwest = { version = "0.12.22", features = ["blocking"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
